force-app/main/default/objects/sked__Job_Offer__c/sked__Job_Offer__c.object-meta.xml
<CustomObject>
    <description>An offer made to multiple resources for a job or subset of a job</description>
    <label>Job Offer</label>
    <nameField>
        <displayFormat>JO-{00000}</displayFormat>
        <label>Job Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>