force-app/main/default/objects/sked__Job_Offer__c/fields/sked__Created_By_Resource__c.field-meta.xml
<CustomField>
    <fullName>sked__Created_By_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the offer created from an allocated job by a resource?</description>
    <label>Created By Resource</label>
    <type>Checkbox</type>
</CustomField>