force-app/main/default/objects/sked__Job_Offer__c/fields/sked__Job__c.field-meta.xml
<CustomField>
    <fullName>sked__Job__c</fullName>
    <description>The job associated with the offer</description>
    <label>Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipLabel>Job Offers</relationshipLabel>
    <relationshipName>Job_Offers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>