force-app/main/default/objects/sked__Job_Offer__c/fields/sked__Resource_Requirement__c.field-meta.xml
<CustomField>
    <fullName>sked__Resource_Requirement__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The (optional) resource requirement associated with the offer</description>
    <label>Resource Requirement</label>
    <referenceTo>sked__Resource_Requirement__c</referenceTo>
    <relationshipLabel>Job Offers</relationshipLabel>
    <relationshipName>Job_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>